--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "firebase": "~2.3.2",
     "angularfire": "~1.1.3",
     "ng-file-upload": "~10.1.11",
-    "ng-file-upload-shim": "~10.1.11"
+    "ng-file-upload-shim": "~10.1.11",
+    "angular-stripe": "~4.2.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
